tdf#167279 svx FrameSelector a11y: Don't send focus events when only selecting

In the borders tabpage used in Writer's "Borders" tab of the
"Format" -> "Paragraphs" dialog, don't always send
AccessibleStateType::FOCUSED events for a border when
it is selected. Only do so when it also receives focus, not
otherwise.

Add a bool param to FrameSelector::SelectBorder to indicate
whether or not the event should be sent. For the case of clicking
one of the options in the "Presets" section handled in
SvxBorderTabPage::SelPreHdl_Impl, focus remains on the
selected item there, so don't send a focus event.

This prevents misleading screen readers about what widget/object
is actually focused.

The logic in SelPreHdl_Impl was more or less there already,
just commented out...

Change-Id: If2258649528824702e3bf1859f4f0e8638ca9fb8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187327
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins